fix: comment area layout issue

--- a/view/src/style/product.css
+++ b/view/src/style/product.css
@@ -281,7 +281,9 @@ section {
 
 /* commentLeftBox */
 .commentLeftBox {
-    margin-left: 10vw;
+    /* margin-left: 10vw; */
+    padding-left: 7%;
+    width: 50%;
     height: 50%;
     display: flex;
     align-items: center;
@@ -298,7 +300,7 @@ section {
 
 /* commentInfoArea */
 .commentInfoArea {
-    margin-left: 2vw;
+    margin-left: -30%;
     flex: 1;
     color: white;
 }
@@ -314,10 +316,10 @@ section {
 
 /* commentRightBox */
 .commentRightBox {
-    margin-right: 6vw;
-    margin-left: 7vw;
+    /* margin-right: 6vw; */
+    /* margin-left: 7vw; */
     padding-top: 16vh;
-    width: 50vw;
+    width: 50%;
     position: relative;
     height: 100vh;
     display: flex;
